Fixed some normalizing export issues from webflow. Spacing and sizing should be more accurate now.

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -18,6 +18,15 @@ html {
 body {
   margin: 0;
 }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+p {
+  margin: 0;
+  padding: 0;
+}
 /* HTML5 display definitions
    ========================================================================== */
 /**
@@ -151,6 +160,9 @@ sub {
  */
 img {
   border: 0;
+  vertical-align: middle;
+  max-width: 100%;
+  display: inline-block;
 }
 /**
  * Correct overflow not hidden in IE 9/10/11.
